--- a/admin-homepage.css
+++ b/admin-homepage.css
@@ -4,7 +4,6 @@ body {
     overflow-x: hidden;
 }
 
-
 .sidebar {
     min-width: auto;
     max-width: 230px;
@@ -56,7 +55,6 @@ body {
 }
 
 @media (max-width: 992px) {
-
     /* Hide the sidebar by default on smaller screens */
     .sidebar {
         display: none;
@@ -67,7 +65,6 @@ body {
     margin-top: 57px;
     /* Height of navbar */
     padding: 20px;
-    border: solid 2px black;
 }
 
 /* For smaller screens, ensure the content takes full width */
@@ -75,4 +72,31 @@ body {
     .content {
         margin-left: 0;
     }
+}
+
+.card-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+
+.user-card {
+    max-height: 300px;
+    width: 700px;
+    overflow-y: auto;
+}
+
+.user-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.user-item img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
 }
