--- a/student-team-proposals.css
+++ b/student-team-proposals.css
@@ -5,22 +5,21 @@ body {
 }
 
 .sidebar {
-    min-width: auto;
-    max-width: 230px;
+    min-width: 250px;
+    max-width: 250px;
     height: 100vh;
     position: fixed;
-    top: 56px;
-    /* Height of navbar */
+    top: 56px; /* Height of navbar */
     left: 0;
     background-color: #cae6db;
     color: #171212;
     padding-top: 20px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
 }
 
 .small-sidebar {
-    min-width: auto;
-    max-width: 230px;
+    min-width: 250px;
+    max-width: 250px;
     height: 100vh;
     position: fixed;
     top: 56px;
