--- a/student-team-proposals.css
+++ b/student-team-proposals.css
@@ -5,7 +5,7 @@ body {
 }
 
 .sidebar {
-    min-width: auto;
+    min-width: 250px;
     max-width: 250px;
     height: 100vh;
     position: fixed;
@@ -63,7 +63,7 @@ body {
 }
 
 .content {
-    margin-top: 57px;
+    margin-top: 56px;
     /* Height of navbar */
     padding: 20px;
 }
@@ -72,6 +72,14 @@ body {
 @media (max-width: 992px) {
     .content {
         margin-left: 0;
+    }
+}
+
+@media (min-width: 992px) {
+    .content {
+        position: relative;
+        margin-left: 250px;
+        display: inline-block;
     }
 }
 
