--- a/styles.css
+++ b/styles.css
@@ -251,8 +251,9 @@ footer {
 }
 
 
-/*my stuff*/
-.style_PopUpCard__mgUyL {
+/*Popup card style*/
+
+.style_PopUpCard {
     display: none;
     z-index: 10;
     height: 487px;
@@ -272,7 +273,7 @@ footer {
 }
 
 @media (max-width: 500px) {
-    .style_PopUpCard__mgUyL {
+    .style_PopUpCard {
         height: 443px;
         margin: 18px;
         box-shadow: 0px 2px 8px rgba(0,0,0,0.25);
@@ -288,7 +289,7 @@ footer {
     }
 }
 
-.style_header__CISD2 {
+.style_Header {
     background-color: #ffffff;
     display: flex;
     flex-direction: row;
@@ -301,8 +302,8 @@ footer {
     box-shadow: 0px 0px 10px #030303;
 }
 
-@media only screen and (max-width: 500px) {
-    .style_header__CISD2 {
+@media (max-width: 500px) {
+    .style_Header {
         width: inherit;
         height: 74px;
         padding: 0px 5px;
@@ -311,7 +312,7 @@ footer {
     }
 }
 
-.text_Heading__Zkgao {
+.text_Heading {
     color: #030303;
     font-size: 24px;
     font-family: "Roboto", Arial, sans-serif;
@@ -319,7 +320,7 @@ footer {
     line-height: 28px;
 }
 
-.text_Title__ZLEfE {
+.text_Title {
     color: #030303;
     font-size: 24px;
     font-family: "Roboto", Arial, sans-serif;
@@ -328,12 +329,12 @@ footer {
 }
 
 @media (max-width: 500px) {
-    .text_Title__ZLEfE {
+    .text_Title {
         margin-left: auto;
     }
 }
 
-.text_Small__HQ874 {
+.text_Small {
     color: #030303;
     font-size: 16px;
     font-family: "Roboto", Arial, sans-serif;
@@ -341,7 +342,7 @@ footer {
     line-height: 19px;
 }
 
-.style_InputBox2__GOJuP {
+.style_InputBox {
     height: 150px;
     width: 60%;
     padding: 0px 8px;
@@ -358,7 +359,7 @@ footer {
 }
 
 
-.style_InputField3__nYn-d {
+.style_InputField {
     width: 80%;
     height: 38px;
     padding: 0px 8px;
@@ -375,18 +376,18 @@ footer {
 }
 
 @media (max-width: 500px) {
-    .style_InputBox2__GOJuP {
+    .style_InputBox{
         width: 90%;
         box-shadow: 0px 2px 8px rgba(0,0,0,0.25);
     }
 
-    .style_InputField3__nYn-d {
+    .style_InputField {
         width: 90%;
         box-shadow: 0px 2px 8px rgba(0,0,0,0.25);
     }
 }
 
-.style_ContainerVertical3__RZI\+U {
+.style_ContainerVertical {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -394,7 +395,7 @@ footer {
     grid-row-gap: 20px;
 }
 
-.style_AddButton__\+XuWL {
+.style_AddButton {
     cursor: pointer;
     top: 17px;
     width: 90px;
@@ -415,8 +416,8 @@ footer {
     align-self: center;
 }
 
-@media only screen and (max-width: 500px) {
-    .style_AddButton__\+XuWL {
+@media (max-width: 500px) {
+    .style_AddButton {
         width: 90%;
         margin-top: 0px;
         margin-right: 10%;
