updated login and create account pages
i insured that login direct to admin homepage when the admin enter "admin" in both fields, and direct to moderator homepage when the moderator enter "moderator" in both fields.
for the createAccountPage i added a js file the check the validation for each field and send an alert message when wrong input is entered.

--- a/createAccountStylePage.css
+++ b/createAccountStylePage.css
@@ -33,7 +33,6 @@ body {
     border-radius: 20px;
   }
 
-  
 /* styles for the footer */
 footer {
   display: flex;
@@ -303,4 +302,14 @@ footer {
   transform: translateX(-56px);
 }
 
+/* Remove arrows from number input */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance:textfield;/* For Firefox */
+}
 
