--- a/TeamFormation.css
+++ b/TeamFormation.css
@@ -244,24 +244,6 @@ code {
 }
 
 
-
-.style_InputField2 {
-    width: 100%;
-    height: 38px;
-    padding: 0px 8px;
-    border: 0;
-    box-sizing: border-box;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px #030303;
-    background-color: #ffffff;
-    color: #030303;
-    font-size: 14px;
-    font-family: "Roboto", Arial, sans-serif;
-    line-height: 16px;
-    outline: none;
-    margin: 10px 30px;
-}
-
 .style_InputField {
     top: 216px;
     left: 56px;
@@ -357,11 +339,11 @@ code {
 
 @media (max-width: 500px) {
     .style_ContainerHorizontal {
-        width: 100%;
+        width: 80%;
         display: flex;
         flex-direction: row;
         grid-gap: 20px;
-        margin-left: auto;
+        align-self: center;
     }
 }
 
@@ -381,133 +363,12 @@ code {
 }
 
 
-.style_Dropdown {
-    cursor: pointer;
-    width: 90%;
-    height: 38px;
-    border: 0;
-    box-sizing: border-box;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px #030303;
-    background-color: #ffffff;
-    color: #030303;
-    font-size: 14px;
-    font-family: "Roboto", Arial, sans-serif;
-    line-height: 16px;
-    outline: none;
-    margin-top: 15px
-}
 
-.style_ContainerVertical2 {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-}
-
-.style_ContainerVertical3 {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 0px 20px;
-    grid-row-gap: 20px;
-}
-
-.style_ContainerHorizontal2 {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    margin: 15px 0px;
-    padding: 0px 8px;
-    align-items: center;
-}
 
 .style_Title {
     padding: 10px 15px;
 }
 
-.style_PopUpCardL {
-    z-index: 10;
-    height: 487px;
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px #030303;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 450px;
-    width: 80%;
-    max-width: 825px;
-    display: flex;
-    flex-direction: column;
-    grid-row-gap: 20px;
-}
-
-@media (max-width: 500px) {
-    .style_PopUpCard {
-        height: 443px;
-        margin: 18px;
-        box-shadow: 0px 2px 8px rgba(0,0,0,0.25);
-        top: 50%;
-        left: 38%;
-        transform: translate(-40%, -50%);
-        width: auto;
-        min-width: 450px;
-        display: flex;
-        flex-direction: column;
-        grid-row-gap: 10px;
-        position: fixed;
-    }
-}
-
-.style_InputBox2 {
-    height: 150px;
-    width: 60%;
-    padding: 0px 8px;
-    border: 0;
-    box-sizing: border-box;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px #030303;
-    background-color: #ffffff;
-    color: #030303;
-    font-size: 14px;
-    font-family: "Roboto", Arial, sans-serif;
-    line-height: 16px;
-    outline: none;
-}
-
-
-.style_InputField3 {
-    width: 80%;
-    height: 38px;
-    padding: 0px 8px;
-    border: 0;
-    box-sizing: border-box;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px #030303;
-    background-color: #ffffff;
-    color: #030303;
-    font-size: 14px;
-    font-family: "Roboto", Arial, sans-serif;
-    line-height: 16px;
-    outline: none;
-}
-
-@media (max-width: 500px) {
-    .style_InputBox2 {
-        width: 90%;
-        box-shadow: 0px 2px 8px rgba(0,0,0,0.25);
-        font-family: "Lexend Deca";
-        
-    }
-
-    .style_InputField3 {
-        width: 90%;
-        box-shadow: 0px 2px 8px rgba(0,0,0,0.25);
-        font-family: "Lexend Deca";
-    }
-}
 
 .style_SideBarButton {
     cursor: pointer;
