--- a/styles.css
+++ b/styles.css
@@ -415,6 +415,9 @@ footer {
     margin-right: 10px;
     align-self: center;
 }
+.style_AddButton:hover {
+    background-color: #1e5a28;
+}
 
 @media (max-width: 500px) {
     .style_AddButton {
