--- a/TeamFormation.css
+++ b/TeamFormation.css
@@ -216,7 +216,7 @@ code {
         width: 90%;
         height: 377px;
         padding-right: 10px;
-        padding-left: 5px;
+        padding-left: 10px;
         padding-top: 10px;
         margin: 18px;
         box-shadow: 0px 2px 8px rgba(0,0,0,0.25);
@@ -409,7 +409,7 @@ code {
 
 @media (max-width: 500px) {
     .style_SideBarButton {
-        display: inline;
+        display: none;
     }
 
     .style_SideBarIcon {
