--- a/TeamFormation.css
+++ b/TeamFormation.css
@@ -236,7 +236,7 @@ code {
     align-content: center;
     height: 164px;
     width: 600px;
-    box-shadow: 0px 0px 10px #030303;
+    box-shadow: none;
 }
 
 
