--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ footer {
     padding: 20px;
     box-sizing: border-box;
     justify-content: space-between;
+    display: none;
 }
 
 .footer-content {
