--- a/styles.css
+++ b/styles.css
@@ -260,7 +260,7 @@ footer {
     height: 487px;
     background-color: #ffffff;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px #030303;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -300,7 +300,7 @@ footer {
     width: auto;
     height: 74px;
     padding: 0px 10px;
-    box-shadow: 0px 0px 10px #030303;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 500px) {
@@ -350,7 +350,7 @@ footer {
     border: 0;
     box-sizing: border-box;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px #030303;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     background-color: #ffffff;
     color: #030303;
     font-size: 14px;
@@ -367,7 +367,7 @@ footer {
     border: 0;
     box-sizing: border-box;
     border-radius: 8px;
-    box-shadow: 0px 0px 10px #030303;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     background-color: #ffffff;
     color: #030303;
     font-size: 14px;
